chore: add prettier config and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,14 @@ dist/
 build/
 *.bundle.css
 *.bundle.js
+
+# Ignore artifacts
+**/node_modules
+**/dist
+**/build
+**/.storybook
+**/.vscode
+**/.git
+**/.github
+**/coverage
+**/public
