--- a/package.json
+++ b/package.json
@@ -20,9 +20,22 @@
         ]
     },
     "dependencies": {
+        "@radix-ui/react-accordion": "^1.2.12",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-tabs": "^1.1.13",
+        "@radix-ui/react-toast": "^1.2.15",
+        "@radix-ui/react-tooltip": "^1.2.8",
+        "clsx": "^2.1.1",
         "next": "16.1.1",
+        "next-themes": "^0.4.6",
         "react": "19.2.3",
-        "react-dom": "19.2.3"
+        "react-dom": "19.2.3",
+        "sass": "^1.97.1",
+        "zod": "^4.3.4"
     },
     "devDependencies": {
         "@commitlint/cli": "^20.3.0",
